--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+      <!-- MyCss -->
+    <link href="css/style.css" rel="stylesheet">  
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -57,6 +60,76 @@
 
 		</nav>
 	</header>
+	<main>
+		<section>
+			<div class="container">
+				<div class="row">
+					<h1> Grid System </h1>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>																		
+				</div>
+				<div class="row">
+					<div class="col-md-3" align="center" style="background-color: red">col-md-3</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>
+					<div class="col-md-1">col-md-1</div>																		
+				</div>		
+				<div class="row">
+					<div class="col-md-6" align="center" style="background-color: green">col-md-6</div>
+					<div class="col-md-6" align="center" style="background-color: red">col-md-6</div>						
+				</div>
+
+				<div class="row">
+					<h1>Desktop, tablet</h1>
+					<div class="col-md-3 col-sm-6 col-sm-12" align="center">col-md-4  col-sm-6 col-sm-12</div>
+					<div class="col-md-3 col-sm-6 col-sm-12" align="center">col-md-4  col-sm-6 col-sm-12</div>					
+					<div class="col-md-3 col-sm-6 col-sm-12" align="center">col-md-4  col-sm-6 col-sm-12</div>
+					<div class="col-md-3 col-sm-6 col-sm-12" align="center">col-md-4  col-sm-6 col-sm-12</div>
+				</div>	<!-- em pc vai ficar 1 linha, em tablet vai ficar 2-->
+				<!-- também é possível inibir linhas conforme o tamanho, ex. nao quero que uma celula apareca no celular-->
+
+				<div class="row">
+					<div class="col-md-3 col-md-offset-3">col-md-offset-3</div>
+					<!-- pulou 3 colunas a esquerda --> 
+				</div>
+
+				<div class="row">
+					<h1>Responsive Utilities</h1>
+					<div class="visible-xs">Phones (<768px)</div>
+					<div class="visible-sm">Tablets (>=768px)</div>
+					<div class="visible-md">Desktops(>=992px)</div>
+					<div class="visible-lg">Desktops(>=1200px)</div>										
+					<!-- pulou 3 colunas a esquerda --> 
+				</div>				
+
+
+			</div>
+		</section>	
+	</main>
+	<footer>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
+	</footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
